# terminal-hero

./: AGENTIC_ARCHITECTURE.md  AGENTIC_SUMMARY.md  AUTONOMOUS_MONITORING.md  COMPONENT_OVERVIEW.md  DOCUMENTATION_INDEX.md  EXAMPLES.md  EXAMPLES_OVERVIEW.md  EXAMPLES_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README_AGENTIC.md  SIMPLE_EXAMPLES.md  TESTING_WALKTHROUGH.md  generate_terminal_hero.py  test_monitor.sh
examples/: api_examples.py  practical_tests.sh  test_simple.py
src/: .env.example  .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
src/agents/: base.py  context_collector.py  doc_search.py  error_analyzer.py  executor.py  orchestrator.py  solution_architect.py
src/cli/: __init__.py  commands.py  ui.py
src/core/: __init__.py  error_patterns.py  system_detector.py
src/graph/: state.py  workflow.py
src/monitor/: __init__.py  autonomous_resolver.py  terminal_monitor.py
src/storage/: __init__.py  history.py  memory.py
